--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GROQ_API_KEY=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
+GROQ_API_KEY='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'
